fix. edit overflow style error
오버플로 스타일 오류 수정

--- a/src/layouts/Main/Main.module.css
+++ b/src/layouts/Main/Main.module.css
@@ -4,7 +4,7 @@
 }
 
 .wrapper {
-  @apply max-w-4xl h-screen mx-auto py-28;
+  @apply max-w-4xl h-full mx-auto py-28;
   @apply flex flex-col items-center;
 }
 
